<resources>
    <string name="app_name">Med-It-Yourself</string>
    <string name="login_main">Login</string>
    <string name="username_email">Username/Email</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="amb_name">Ambulance Name</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="register_main">Register</string>
    <string name="get_started">Get Started</string>
    <string name="create_new">Create New</string>
    <string name="i_ambulance">Ambulance</string>
    <string name="i_doctor">Doctor</string>
    <string name="take_picture">Take a picture</string>
    <string name="confirm_picture">Confirm Picture</string>
    <string name="amb_assist">Need Immediate Ambulance</string>
    <string name="amb_available">Ambulance Is Available</string>
    <string name="logout">Logout</string>
    <string name="req_amb">Request Ambulance</string>
    <string name="amb_request">Request Ambulance</string>
    <string name="user">Customer</string>
    <string name="regFrag">Swipe right to login</string>
    <string name="logFrag">Swipe left to register</string>
    <string name="provider">Provider</string>
    <string name="i_shop">Shop</string>
    <string name="buy_meds">Buy Meds</string>
    <string name="choose1">Choose Any One</string>
    <string name="old_login">Have An Account</string>
    <string name="title_activity_ambulance_map">Map</string>
    <string name="amb_r">AmbR</string>
    <string name="amb_pre">AmbPre</string>
    <string name="amb_lux">AmbLux</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="ride_id">RideId</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_provider_map">Map</string>
    <string name="title_main">MainActivity</string>
    <string name="pickup_customer">Picked Up Customer</string>
    <string name="destination">Destination: </string>
    <string name="history">History</string>
    <string name="active">Active</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="created_by">Created By</string>
    <string name="creator">Avishake Adhikary</string>
    <string name="creator_phone">(+91) 8017916330</string>
    <string name="creator_email">avhishe.adhikary11@gmail.com</string>
    <string name="gen_doc">General</string>
    <string name="pre_doc">Premium</string>
    <string name="lux_doc">Luxury</string>
    <string name="call_doc">Call Doctor</string>
    <string name="doc_found">Doctor Found</string>
    <string name="email_doc">Email Doctor</string>
    <string name="req_doc">Request Doctor</string>
    <string name="doc_setup">Setup Doctor Profile</string>
    <string name="doc_unavailable">Doctors Are Unavailable</string>


</resources>