<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProviderDoctorSettings"
    android:orientation="vertical"
    android:background="@color/darkMain"
    android:padding="20sp">
    <EditText
        android:id="@+id/provider_doctor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/name"
        android:layout_marginBottom="20sp"/>
    <EditText
        android:id="@+id/provider_doctor_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/phone"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginBottom="20sp"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/provider_doctor_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/email"
        android:layout_marginBottom="20sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ProviderDoctorRadioGroup"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen_doc"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:id="@+id/DocG"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_doc"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:id="@+id/DocPre"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lux_doc"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:id="@+id/DocLux"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/provider_doctor_confirm"
            android:backgroundTint="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/confirm"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/provider_doctor_back"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/back"/>
    </LinearLayout>
</LinearLayout>
