<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProviderSettingsActivity"
    android:orientation="vertical"
    android:background="@color/darkMain"
    android:padding="20sp">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/ProviderProfileImage"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20sp"/>
    <EditText
        android:id="@+id/provider_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/name"
        android:layout_marginBottom="20sp"/>
    <EditText
        android:id="@+id/provider_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/phone"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginBottom="20sp"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/provider_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/amb_name"
        android:layout_marginBottom="20sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ProviderRadioGroup"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amb_r"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:id="@+id/AmbR"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amb_pre"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:id="@+id/AmbPre"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amb_lux"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:id="@+id/AmbLux"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/provider_confirm"
            android:backgroundTint="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/confirm"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/provider_back"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/back"/>
        </LinearLayout>
</LinearLayout>
