<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="50dp"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_main"
        android:textAlignment="center"
        android:textSize="40sp"
        android:padding="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="25sp"
        android:textAlignment="center"
        android:padding="15dp"
        />

    <EditText
        android:id = "@+id/username"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:padding="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/email"
        android:textSize="25sp"
        android:padding="15dp"
        />

    <EditText
        android:id = "@+id/email"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:padding="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/password"
        android:textSize="25sp"
        android:padding="15dp"
        />

    <EditText
        android:id = "@+id/password"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "textPassword"
        android:padding="15dp"
        />
    <Button
        android:id="@+id/register"
        android:text="@string/register_main"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        />
    <Button
        android:id="@+id/login"
        android:text="@string/old_login"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        />
</LinearLayout>