<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkMain"
    android:layout_gravity="center_horizontal"
    tools:context=".UserDoctorActivity">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UserDoctorRadioGroup"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen_doc"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:id="@+id/DocG"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_doc"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:id="@+id/DocPre"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lux_doc"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:id="@+id/DocLux"/>
    </RadioGroup>
    <Button
        android:id="@+id/request_doctor"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/req_doc"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        style="@style/Widget.MaterialComponents.Button.Icon"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_centerInParent="true"
        android:id="@+id/user_doctor_image"
        android:visibility="gone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doc_unavailable"
        android:textSize="20sp"
        android:id="@+id/user_doctor_unavailable_text"
        android:textColor="@android:color/white"
        android:layout_below="@+id/user_doctor_image"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/final_layout"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/doc_name"
            android:text=""
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/doc_phone"
            android:text=""
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/doc_email"
            android:text=""
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/call_doctor"
                android:backgroundTint="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/call_doc"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email_doctor"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/email_doc"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>